# Advanced-Digital-Image-Processing-and-Computer-Vision-Spr-26

./: README.md  pyproject.toml
assignment_1/: .gitignore  section_1.ipynb  section_2.ipynb  section_3.ipynb  section_4.ipynb
assignment_2/: section_1.ipynb  section_2.ipynb  section_3.ipynb
assignment_3/: .gitignore  section_1.ipynb  section_2.ipynb  section_3.ipynb  test_output.avi  train_output.avi  ucf11_helper.ipynb
